@@ -1,14 +1,0 @@
-# $NetBSD: Makefile,v 1.4 2017/09/16 19:27:20 wiz Exp $
-
-DISTNAME=	tinycss-0.4
-PKGNAME=	${PYPKGPREFIX}-${DISTNAME}
-CATEGORIES=	python textproc
-MASTER_SITES=	${MASTER_SITE_PYPI:=t/tinycss/}
-
-MAINTAINER=	pkgsrc-users@NetBSD.org
-HOMEPAGE=	https://tinycss.readthedocs.io/
-COMMENT=	Complete yet simple CSS parser for Python
-LICENSE=	modified-bsd
-
-.include "../../lang/python/egg.mk"
-.include "../../mk/bsd.pkg.mk"
