@@ -1,64 +1,0 @@
-@comment $NetBSD: PLIST,v 1.2 2017/01/10 13:54:43 kleink Exp $
-${PYSITELIB}/${EGG_INFODIR}/PKG-INFO
-${PYSITELIB}/${EGG_INFODIR}/SOURCES.txt
-${PYSITELIB}/${EGG_INFODIR}/dependency_links.txt
-${PYSITELIB}/${EGG_INFODIR}/requires.txt
-${PYSITELIB}/${EGG_INFODIR}/top_level.txt
-${PYSITELIB}/tinycss/__init__.py
-${PYSITELIB}/tinycss/__init__.pyc
-${PYSITELIB}/tinycss/__init__.pyo
-${PYSITELIB}/tinycss/color3.py
-${PYSITELIB}/tinycss/color3.pyc
-${PYSITELIB}/tinycss/color3.pyo
-${PYSITELIB}/tinycss/css21.py
-${PYSITELIB}/tinycss/css21.pyc
-${PYSITELIB}/tinycss/css21.pyo
-${PYSITELIB}/tinycss/decoding.py
-${PYSITELIB}/tinycss/decoding.pyc
-${PYSITELIB}/tinycss/decoding.pyo
-${PYSITELIB}/tinycss/fonts3.py
-${PYSITELIB}/tinycss/fonts3.pyc
-${PYSITELIB}/tinycss/fonts3.pyo
-${PYSITELIB}/tinycss/page3.py
-${PYSITELIB}/tinycss/page3.pyc
-${PYSITELIB}/tinycss/page3.pyo
-${PYSITELIB}/tinycss/parsing.py
-${PYSITELIB}/tinycss/parsing.pyc
-${PYSITELIB}/tinycss/parsing.pyo
-${PYSITELIB}/tinycss/speedups.so
-${PYSITELIB}/tinycss/tests/__init__.py
-${PYSITELIB}/tinycss/tests/__init__.pyc
-${PYSITELIB}/tinycss/tests/__init__.pyo
-${PYSITELIB}/tinycss/tests/speed.py
-${PYSITELIB}/tinycss/tests/speed.pyc
-${PYSITELIB}/tinycss/tests/speed.pyo
-${PYSITELIB}/tinycss/tests/test_api.py
-${PYSITELIB}/tinycss/tests/test_api.pyc
-${PYSITELIB}/tinycss/tests/test_api.pyo
-${PYSITELIB}/tinycss/tests/test_color3.py
-${PYSITELIB}/tinycss/tests/test_color3.pyc
-${PYSITELIB}/tinycss/tests/test_color3.pyo
-${PYSITELIB}/tinycss/tests/test_css21.py
-${PYSITELIB}/tinycss/tests/test_css21.pyc
-${PYSITELIB}/tinycss/tests/test_css21.pyo
-${PYSITELIB}/tinycss/tests/test_decoding.py
-${PYSITELIB}/tinycss/tests/test_decoding.pyc
-${PYSITELIB}/tinycss/tests/test_decoding.pyo
-${PYSITELIB}/tinycss/tests/test_fonts3.py
-${PYSITELIB}/tinycss/tests/test_fonts3.pyc
-${PYSITELIB}/tinycss/tests/test_fonts3.pyo
-${PYSITELIB}/tinycss/tests/test_page3.py
-${PYSITELIB}/tinycss/tests/test_page3.pyc
-${PYSITELIB}/tinycss/tests/test_page3.pyo
-${PYSITELIB}/tinycss/tests/test_tokenizer.py
-${PYSITELIB}/tinycss/tests/test_tokenizer.pyc
-${PYSITELIB}/tinycss/tests/test_tokenizer.pyo
-${PYSITELIB}/tinycss/token_data.py
-${PYSITELIB}/tinycss/token_data.pyc
-${PYSITELIB}/tinycss/token_data.pyo
-${PYSITELIB}/tinycss/tokenizer.py
-${PYSITELIB}/tinycss/tokenizer.pyc
-${PYSITELIB}/tinycss/tokenizer.pyo
-${PYSITELIB}/tinycss/version.py
-${PYSITELIB}/tinycss/version.pyc
-${PYSITELIB}/tinycss/version.pyo
