@@ -1,6 +1,0 @@
-$NetBSD: distinfo,v 1.3 2017/01/10 13:54:43 kleink Exp $
-
-SHA1 (tinycss-0.4.tar.gz) = 8624e198991b21b47565eb1811049d8330a744ed
-RMD160 (tinycss-0.4.tar.gz) = fa2d6427336e8f3b12820c4904ef0aabe03c65a7
-SHA512 (tinycss-0.4.tar.gz) = 13a50332cddc28026fd7ecc007e14085976284e69de6ea93d1013502fd9791694092c010947b13dcd23f3a2df65f277f62410abd90d03eac16fa5af913673b0a
-Size (tinycss-0.4.tar.gz) = 87759 bytes
